2007-11-04  Inge Wallin  <inge@lysator.liu.se>

	APIDOX
	* src/lib/PlaceMarkContainer.h: Add apidox

	APIDOX
	* src/lib/geodata/data/GeoDataObject.h,	
	* src/lib/geodata/data/GeoDataFeature.h,	
	* src/lib/geodata/data/GeoDataPlaceMark.h:
	Add apidox.  GeoDataObject and GeoDataPlaceMark are finished,
	GeoDataFeature not really yet.

2007-11-01 Andrew Manson <g.real.ate@gmail.com>
    Altered the gps layer update scheme to stop it 
    updating anything if the gps location has not changed.

2007-11-01  Torsten Rahn  <rahn@kde.org>
    
    * src/lib/PlaceMarkInfoDialog.cpp
    * src/lib/XmlHandler.cpp
    * src/lib/MarbleModel.cpp
    * src/lib/geodata/data/GeoDataFeature.cpp
    * src/lib/geodata/data/GeoDataFeature.h
    * ChangeLog
    * data/placemarks/COPYRIGHT
    * data/placemarks/boundaryplacemarks.kml
    * data/placemarks/boundaryplacemarks.cache

    - Adding Oceans.

2007-10-31  Torsten Rahn  <rahn@kde.org>
    
    * src/lib/geodata/data:

    - Changed lots of base classes to internally enable
    real styles (in the spirit of KML) for placemarks.

2007-10-31  Torsten Rahn  <rahn@kde.org>
    
    * src/lib/geodata/data:

    - Added some data about continents with 
      points of geodetic centers / inaccessibility.

2007-09-26  Torsten Rahn  <rahn@kde.org>
	
	* data/placemarks/boundaryplacemarks.kml:

	- Added some data about continents with 
	  points of geodetic centers / inaccessibility.

2007-09-26  Inge Wallin  <inge@lysator.liu.se>

	Make some files follow the coding standards better.
	* src/lib/gps/GpxFile.h,
	* src/lib/gps/RouteContainer.h,
	* src/lib/gps/Track.h,
	* src/lib/gps/WaypointContainer.cpp,
	* src/lib/gps/Waypoint.h,
	* src/lib/gps/GpxFileModel.cpp,
	* src/lib/gps/WaypointContainer.h,
	* src/lib/gps/GpxFileModel.h:
	Follow coding standards
	
	APIDOX
	* src/lib/MarbleModel.h: More apidox
	* src/lib/MarbleModel.cpp: Improve comments
	
2007-09-26  Torsten Rahn  <rahn@kde.org>
	