@@ -1,5 +1,11 @@
 2007-11-04  Inge Wallin  <inge@lysator.liu.se>
 
+	Warnings--
+	* src/kdemain.cpp,
+	* src/lib/PlaceMarkContainer.cpp,
+	* src/lib/geodata7data/GeoDataFeature.cpp:
+	Improve comments, remove warnings, clean code
+
 	APIDOX
 	* src/lib/PlaceMarkContainer.h: Add apidox
 
